minor changes (#7)
Human changes - Swagger docs cleanup, removed ModelMapper, started renaming DTO -> Dto