@@ -1,6 +1,7 @@
-package com.awesome.testing.controller;
+package com.awesome.testing.controller.users;
 
-import com.awesome.testing.dto.UserResponseDTO;
+import com.awesome.testing.dto.UserResponseDto;
+import com.awesome.testing.model.User;
 import com.awesome.testing.service.UserService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
@@ -11,12 +12,9 @@ import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
-import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @CrossOrigin(origins = "http://localhost:8081", maxAge = 3600)
 @RestController
@@ -26,36 +24,31 @@ import java.util.stream.Collectors;
 public class UserGetController {
 
     private final UserService userService;
-    private final ModelMapper modelMapper;
 
     @GetMapping
-    @PreAuthorize("hasRole('ROLE_ADMIN') or hasRole('ROLE_CLIENT')")
     @Operation(summary = "Get all users", security = @SecurityRequirement(name = "bearerAuth"))
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "List of users",
-                    content = @Content(schema = @Schema(implementation = UserResponseDTO.class))),
-            @ApiResponse(responseCode = "400", description = "Something went wrong", content = @Content),
-            @ApiResponse(responseCode = "403", description = "Access denied", content = @Content),
-            @ApiResponse(responseCode = "404", description = "Users not found", content = @Content)
+                    content = @Content(schema = @Schema(implementation = UserResponseDto.class))),
+            @ApiResponse(responseCode = "401", description = "Unauthorized – Missing or invalid token", content = @Content)
     })
-    public List<UserResponseDTO> getAll() {
+    public List<UserResponseDto> getAll() {
         return userService.getAll().stream()
-                .map(user -> modelMapper.map(user, UserResponseDTO.class))
-                .collect(Collectors.toList());
+                .map(UserResponseDto::from)
+                .toList();
     }
 
     @GetMapping("/{username}")
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
     @Operation(summary = "Get user by username", security = @SecurityRequirement(name = "bearerAuth"))
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "User details",
-                    content = @Content(schema = @Schema(implementation = UserResponseDTO.class))),
-            @ApiResponse(responseCode = "400", description = "Something went wrong", content = @Content),
-            @ApiResponse(responseCode = "403", description = "Access denied", content = @Content),
+                    content = @Content(schema = @Schema(implementation = UserResponseDto.class))),
+            @ApiResponse(responseCode = "401", description = "Unauthorized – Missing or invalid token", content = @Content),
             @ApiResponse(responseCode = "404", description = "The user doesn't exist", content = @Content)
     })
-    public UserResponseDTO getByUsername(@Parameter(description = "Username") @PathVariable String username) {
-        return modelMapper.map(userService.search(username), UserResponseDTO.class);
+    public UserResponseDto getByUsername(@Parameter(description = "Username") @PathVariable String username) {
+        User user = userService.search(username);
+        return UserResponseDto.from(user);
     }
 
 }
